# Final_powerpack_v01_25_08_31

./: .gitignore  12Channel_graph_v01_25_12_18.xml  1st_powerpack_12Channel_graph_v01_26_02_01.xml  2nd_powerpack_12Channel_graph_v01_26_02_01.xml  Final_powerpack_command_v01_25_08_31  both_powerpacks_12Channel_graph_v01_26_02_01.xml  mpc_log.csv
arduino/all_board_test_wo_hardware_v01_26_01_12/: all_board_test_wo_hardware_v01_26_01_12.ino
arduino/board_1-3_test_wo_hardware_v01_26_01_12/: board_1-3_test_wo_hardware_v01_26_01_12.ino
arduino/board_1-3_v01_26_01_12/: board_1-3_v01_26_01_12.ino
arduino/board_4_test_wo_hardware_v01_26_01_12/: board_4_test_wo_hardware_v01_26_01_12.ino
arduino/board_4_v01_26_01_12/: board_4_v01_26_01_12.ino
src/powerpack_controller/: CMakeLists.txt  package.xml
src/powerpack_controller/config/: 1st_powerpack_config.yaml  2nd_powerpack_config.yaml  Config.yaml
src/powerpack_controller/include/: CanBridge.hpp  Controller.hpp  TeensyBridge.hpp  TeensyBridgeNode.hpp
src/powerpack_controller/launch/: control.launch.py  control_1.launch.py  control_2.launch.py  control_all.launch.py  launch.py
src/powerpack_controller/scripts/: Combined_test_after_repair_v02_20260213_164454.csv  Combined_test_v01_20260201_214120.csv  Combined_test_v02_20260201_214702.csv  adc_logger.py  can_control.py  can_monitor.py  dashboard.py  data_final_corrected_20251022_112013.csv  log_topics.py  self_test_multi_ref_server.py  self_test_ref_server.py  tcp_test.py
src/powerpack_controller/scripts/ros2_logs_2025_12_24-17_01_33/: all_pwm_cmds.csv  all_sensors_kpa.csv  mpc_refs_kpa.csv
src/powerpack_controller/src/: .gitignore  CanBridge.cpp  Controller.cpp  TeensyBridge.cpp  TeensyBridgeNode.cpp  can_bridge_main.cpp  controller_main.cpp  main.cpp  teensy_bridge_main.cpp
src/topic_csv_converter/: package.xml  setup.cfg  setup.py
src/topic_csv_converter/config/: topics_wide.yaml
src/topic_csv_converter/launch/: wide_logger.launch.py
src/topic_csv_converter/topic_csv_converter/: topic_to_csv.py  wide_logger.py
