<?xml version="1.0"?>
<package format="3">
  <name>powerpack_controller</name>
  <version>0.0.0</version>
  <description>Powerpack controller with Teensy bridge and TCP reference input</description>
  <maintainer email="risebrl@todo.todo">risebrl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
