<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>powerpack_controller</name>
  <version>0.0.1</version>
  <description>ROS 2 Controller for Pneumatic Soft Robot</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <depend>libeigen-dev</depend>
  
  <depend>qpoases_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>